--- a/the_beginning.ipynb
+++ b/the_beginning.ipynb
@@ -8,17 +8,41 @@
    "outputs": [],
    "source": [
     "class Account:\n",
-    "\n",
-    "    def __init__(self):\n",
-    "        pass\n",
-    "    #account_id = must contain '123456789'\n",
-    "    #balance\n",
-    "    #interest\n",
+    "    def __init__(self, input_account_id = '0000', input_balance = 0.0, input_interest = 0)\n",
+    "        self.account_id = input_account_id\n",
+    "        self.interest = input_interest\n",
+    "        self.balance = input_balance\n",
+    "    \n",
     "    def get_account(self):\n",
-    "        pass #get method\n",
+    "        account_summary = f'(Account ID: {self.account_id}\\nBalance: ${self.balance:.2f}\\nInterest Rate: {self.interest}%)'\n",
+    "        return account_summary\n",
     "\n",
-    "    def set_account(self):\n",
-    "        pass\n",
+    "    def set_account(self, input_account_id, input_balance, input_interest):\n",
+    "        #Check account ID\n",
+    "        if not isinstance(input_account_id, str):\n",
+    "            raise TypeError('Account ID must be string.')\n",
+    "        elif len(input_account_id) != 4:\n",
+    "            raise ValueError('Account ID must be 4 characters in length.')\n",
+    "        elif input_account_id.isdigit() = False:\n",
+    "            raise ValueError('Account ID must be 4 numeric charaters.')\n",
+    "        \n",
+    "        #Check balance\n",
+    "        elif not isinstance(input_balance, float) or not isinstance(input_balance, int):\n",
+    "            raise TypeError('Balance must be a floating point number or integer')\n",
+    "        elif input_balance < 0:\n",
+    "            raise ValueError('Balance must be not be less than 0')\n",
+    "\n",
+    "        #Check Interest\n",
+    "        elif not isinstance(input_interest, int)\n",
+    "            raise TypeError('Interest must be an integer')\n",
+    "        elif input_interest < 0:\n",
+    "            raise ValueError('Interest must be not be less than 0')\n",
+    "        \n",
+    "        else:\n",
+    "            print('Updating account status')\n",
+    "            self._account_id = input_account_id\n",
+    "            self._balance = input_balance\n",
+    "            self._interest = input_interest\n",
     "\n",
     "    account = property(get_account, set_account)\n",
     "\n",
@@ -63,8 +87,18 @@
     "    credit = property(get_credit, set_credit)      \n",
     "\n",
     "\n",
-    "class Customer(Account):\n",
-    "    pass\n",
+    "class Customer:\n",
+    "    def __init__(self, input_username = '', input_checking = Checking(), input_savings = Savings(), input_credit = Credit())\n",
+    "        self.username = input_username\n",
+    "        self.checking = input_checking\n",
+    "        self.savings = input_savings\n",
+    "        self.credit = input_credit\n",
+    "        self.accounts = [self.checking, self.savings, self.credit]\n",
+    "    \n",
+    "    def get_customer(self):\n",
+    "\n",
+    "\n",
+    "    def set_customer(self, Checking(), Savings(), Credit()):\n",
     "    # username\n",
     "    # checking\n",
     "    # savings\n",
