--- a/the_beginning.ipynb
+++ b/the_beginning.ipynb
@@ -152,7 +152,7 @@
     "        print('This is not a number, try again', flush=True)\n",
     "        deposit()\n",
     "\n",
-    "    print(f'Confirm the following deposit amount with Y or N: {deposit_amount}0.', flush=True)\n",
+    "    print(f'Confirm the following deposit amount with Y or N: {deposit_amount:.2f}.', flush=True)\n",
     "    confirmation = input()\n",
     "    print(flush=True)\n",
     "    \n",
@@ -163,7 +163,7 @@
     "            elif account == 'checking':\n",
     "                new_amount = checking_account + deposit_amount\n",
     "            \n",
-    "            print(f'Your deposit of ${deposit_amount}0 has been made into your {account} account. The total is now: {new_amount}0.')\n",
+    "            print(f'Your deposit of ${deposit_amount:.2f} has been made into your {account} account. The total is now: {new_amount:.2f}.')\n",
     "            print(flush=True) # prints a blank line for better formatting\n",
     "            interface()\n",
     "        elif confirmation.upper() == 'N':\n",
@@ -205,7 +205,7 @@
     "        print('This is not a number, try again', flush=True)\n",
     "        withdraw()\n",
     "\n",
-    "    print(f'Confirm the following withdrawl amount with Y or N: {withdraw_amount}', flush=True)\n",
+    "    print(f'Confirm the following withdrawl amount with Y or N: {withdraw_amount:.2f}', flush=True)\n",
     "    confirmation = input()\n",
     "    print(flush=True)\n",
     "    \n",
@@ -215,7 +215,7 @@
     "                new_amount = savings_account - withdraw_amount\n",
     "            elif account == 'checking':\n",
     "                new_amount = checking_account - withdraw_amount\n",
-    "            print(f'Your withdrawl of ${withdraw_amount} has been made from your {account} account. The total is now: {new_amount}0.')\n",
+    "            print(f'Your withdrawl of ${withdraw_amount:.2f} has been made from your {account} account. The total is now: {new_amount:.2f}.')\n",
     "            print(flush=True) # prints a blank line for better formatting\n",
     "            interface()\n",
     "        elif confirmation.upper() == 'N':\n",
@@ -258,7 +258,7 @@
     "        print('This is not a number, try again', flush=True)\n",
     "        deposit()\n",
     "\n",
-    "    print(f'Confirm the following charge amount with Y or N: {charge_amount}', flush=True)\n",
+    "    print(f'Confirm the following charge amount with Y or N: {charge_amount:.2f}', flush=True)\n",
     "    confirmation = input()\n",
     "    print(flush=True)\n",
     "    \n",
@@ -267,7 +267,7 @@
     "            #if charge_amount > cc_limit\n",
     "            new_amount = credit_charge + charge_amount\n",
     "            #should this be positive or negative\n",
-    "            print(f'Your charge of ${charge_amount} has been made onto your credit card. Your credit card total is now: {new_amount}0.')\n",
+    "            print(f'Your charge of ${charge_amount:.2f} has been made onto your credit card. Your credit card total is now: {new_amount:.2f}.')\n",
     "            print(flush=True) # prints a blank line for better formatting\n",
     "        elif confirmation.upper() == 'N':\n",
     "            print('Invalid confirmation. Charge not made. Returning to main menu.', flush=True)\n",
@@ -295,7 +295,7 @@
     "    #if id in customers\n",
     "    print(f'Customer {id} has selected credit card payment')\n",
     "    \n",
-    "    print(f'How much would you like pay towards your credit card? Your current balance due is {credit_balance}', flush=True)\n",
+    "    print(f'How much would you like pay towards your credit card? Your current balance due is {credit_balance:.2f}', flush=True)\n",
     "\n",
     "    payment_input = input()\n",
     "\n",
@@ -306,7 +306,7 @@
     "        print('This is not a number, try again', flush=True)\n",
     "        deposit()\n",
     "\n",
-    "    print(f'Confirm the following payment amount with Y or N: {payment_amount}', flush=True)\n",
+    "    print(f'Confirm the following payment amount with Y or N: {payment_amount:.2f}', flush=True)\n",
     "    confirmation = input()\n",
     "    print(flush=True)\n",
     "    \n",
@@ -314,7 +314,7 @@
     "        if confirmation.upper() == 'Y':\n",
     "\n",
     "            new_amount = credit_balance - payment_amount\n",
-    "            print(f'Your payment of ${payment_amount}0 has been made on your credit card. The total is now: ${new_amount}0.')\n",
+    "            print(f'Your payment of ${payment_amount:.2f} has been made on your credit card. The total is now: ${new_amount:.2f}.')\n",
     "            print(flush=True) # prints a blank line for better formatting\n",
     "            interface()\n",
     "        elif confirmation.upper() == 'N':\n",
