--- a/the_beginning.ipynb
+++ b/the_beginning.ipynb
@@ -8,46 +8,62 @@
    "outputs": [],
    "source": [
     "class Account:\n",
-    "    def __init__(self, input_account_id = '0000', input_balance = 0.0, input_interest = 0)\n",
+    "    def __init__(self, input_account_id = '0000', input_balance = 0.0, input_interest = 0):\n",
     "        self.account_id = input_account_id\n",
-    "        self.interest = input_interest\n",
     "        self.balance = input_balance\n",
+    "        self.interest = input_interest\n",
     "    \n",
-    "    def get_account(self):\n",
+    "    def __str__(self)\n",
     "        account_summary = f'(Account ID: {self.account_id}\\nBalance: ${self.balance:.2f}\\nInterest Rate: {self.interest}%)'\n",
     "        return account_summary\n",
     "\n",
-    "    def set_account(self, input_account_id, input_balance, input_interest):\n",
+    "    def get_account_id(self):\n",
+    "        return self.account_id\n",
+    "\n",
+    "    def set_account_id(self, input_account_id, input_balance, input_interest):\n",
     "        #Check account ID\n",
     "        if not isinstance(input_account_id, str):\n",
     "            raise TypeError('Account ID must be string.')\n",
     "        elif len(input_account_id) != 4:\n",
     "            raise ValueError('Account ID must be 4 characters in length.')\n",
-    "        elif input_account_id.isdigit() = False:\n",
+    "        elif input_account_id.isdigit() == False:\n",
     "            raise ValueError('Account ID must be 4 numeric charaters.')\n",
-    "        \n",
+    "\n",
+    "        else:\n",
+    "            print('Updating balance')\n",
+    "            self._account_id = input_account_id\n",
+    "\n",
+    "    def get_balance(self):\n",
+    "        return self.balance\n",
+    "\n",
+    "    def set_balance(self, input_account_id, input_balance, input_interest):\n",
     "        #Check balance\n",
-    "        elif not isinstance(input_balance, float) or not isinstance(input_balance, int):\n",
+    "        if not isinstance(input_balance, float) or not isinstance(input_balance, int):\n",
     "            raise TypeError('Balance must be a floating point number or integer')\n",
     "        elif input_balance < 0:\n",
     "            raise ValueError('Balance must be not be less than 0')\n",
+    "        \n",
+    "        else:\n",
+    "            print('Updating balance')\n",
+    "            self._balance = input_balance\n",
     "\n",
+    "    def get_interest(self):\n",
+    "        return self.interest\n",
+    "\n",
+    "    def set_interest(self, input_account_id, input_balance, input_interest):\n",
     "        #Check Interest\n",
-    "        elif not isinstance(input_interest, int)\n",
+    "        if not isinstance(input_interest, int)\n",
     "            raise TypeError('Interest must be an integer')\n",
     "        elif input_interest < 0:\n",
     "            raise ValueError('Interest must be not be less than 0')\n",
     "        \n",
     "        else:\n",
-    "            print('Updating account status')\n",
-    "            self._account_id = input_account_id\n",
-    "            self._balance = input_balance\n",
+    "            print('Updating interest rate')\n",
     "            self._interest = input_interest\n",
     "\n",
-    "    account = property(get_account, set_account)\n",
-    "\n",
-    "\n",
-    "\n",
+    "    account_id = property(get_account_id, set_account_id)\n",
+    "    balance = property(get_balance, set_balance)\n",
+    "    interest = property(get_interest, set_interest)\n",
     "\n",
     "class Checking(Account):\n",
     "    pass\n",
