--- a/the_beginning.ipynb
+++ b/the_beginning.ipynb
@@ -5,7 +5,20 @@
    "execution_count": null,
    "id": "32274617",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "super(): no arguments",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mRuntimeError\u001b[39m                              Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 72\u001b[39m\n\u001b[32m     67\u001b[39m         \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[32m     69\u001b[39m     checking = \u001b[38;5;28mproperty\u001b[39m(get_checking, set_checking)\n\u001b[32m---> \u001b[39m\u001b[32m72\u001b[39m \u001b[38;5;28;43;01mclass\u001b[39;49;00m\u001b[38;5;250;43m \u001b[39;49m\u001b[34;43;01mSavings\u001b[39;49;00m\u001b[43m(\u001b[49m\u001b[43mAccount\u001b[49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n\u001b[32m     73\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mpass\u001b[39;49;00m\n\u001b[32m     74\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[34;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 74\u001b[39m, in \u001b[36mSavings\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m     72\u001b[39m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mSavings\u001b[39;00m(Account):\n\u001b[32m     73\u001b[39m     \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m74\u001b[39m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m.\u001b[34m__init__\u001b[39m()\n\u001b[32m     75\u001b[39m     \u001b[38;5;66;03m# interest is 1%\u001b[39;00m\n\u001b[32m     76\u001b[39m     \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mget_savings\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n",
+      "\u001b[31mRuntimeError\u001b[39m: super(): no arguments"
+     ]
+    }
+   ],
    "source": [
     "class Account:\n",
     "    def __init__(self, input_account_id = '0000', input_balance = 0.0, input_interest = 0):\n",
@@ -13,7 +26,7 @@
     "        self.balance = input_balance\n",
     "        self.interest = input_interest\n",
     "    \n",
-    "    def __str__(self)\n",
+    "    def __str__(self):\n",
     "        account_summary = f'(Account ID: {self.account_id}\\nBalance: ${self.balance:.2f}\\nInterest Rate: {self.interest}%)'\n",
     "        return account_summary\n",
     "\n",
@@ -52,7 +65,7 @@
     "\n",
     "    def set_interest(self, input_account_id, input_balance, input_interest):\n",
     "        #Check Interest\n",
-    "        if not isinstance(input_interest, int)\n",
+    "        if not isinstance(input_interest, int):\n",
     "            raise TypeError('Interest must be an integer')\n",
     "        elif input_interest < 0:\n",
     "            raise ValueError('Interest must be not be less than 0')\n",
@@ -66,28 +79,32 @@
     "    interest = property(get_interest, set_interest)\n",
     "\n",
     "class Checking(Account):\n",
-    "    pass\n",
-    "    def __init__(self):\n",
-    "        super().__init__()\n",
-    "    # interest is 0%\n",
-    "    def get_checking(self):\n",
-    "        pass\n",
-    "    def set_checking(self):\n",
-    "        pass\n",
+    "    def __init__(self, account_id, balance):\n",
+    "        super().__init__(account_id, balance)\n",
+    "        self.interest = 0.0  # no intrest \n",
+    "    def __str__(self):\n",
+    "        return (\n",
+    "            f\"Checking Account | \"\n",
+    "            f\"ID: {self.account_id} | \"\n",
+    "            f\"Balance: ${self.balance:.2f}\"\n",
+    "        )\n",
     "\n",
-    "    checking = property(get_checking, set_checking)\n",
+    "    #checking = property(get_checking, set_checking)\n",
     "\n",
     "\n",
     "class Savings(Account):\n",
-    "    pass\n",
-    "    super().__init__()\n",
-    "    # interest is 1%\n",
-    "    def get_savings(self):\n",
-    "        pass\n",
-    "    def set_savings(self):\n",
-    "        pass\n",
+    "    def __init__(self, account_id, balance):\n",
+    "        super().__init__(account_id, balance)\n",
+    "        self.interest = 1.0  # 1% intrest \n",
+    "    def __str__(self):\n",
+    "        return (\n",
+    "            f\"Savings Account | \"\n",
+    "            f\"ID: {self.account_id} | \"\n",
+    "            f\"Balance: ${self.balance:.2f} | \"\n",
+    "            f\"Interest: {self.interest:.2f}%\")\n",
+    "    \n",
     "\n",
-    "    savings = property(get_savings, set_savings)    \n",
+    "    #savings = property(get_savings, set_savings)    \n",
     "\n",
     "\n",
     "class Credit(Account):\n",
@@ -104,7 +121,7 @@
     "\n",
     "\n",
     "class Customer:\n",
-    "    def __init__(self, input_username = '', input_checking = Checking(), input_savings = Savings(), input_credit = Credit())\n",
+    "    def __init__(self, input_username = '', input_checking = Checking(), input_savings = Savings(), input_credit = Credit()):\n",
     "        self.username = input_username\n",
     "        self.checking = input_checking\n",
     "        self.savings = input_savings\n",
@@ -112,9 +129,10 @@
     "        self.accounts = [self.checking, self.savings, self.credit]\n",
     "    \n",
     "    def get_customer(self):\n",
+    "        pass\n",
     "\n",
-    "\n",
-    "    def set_customer(self, Checking(), Savings(), Credit()):\n",
+    "    def set_customer(self, input_checking = Checking(), input_savings = Savings(), input_credit = Credit()):\n",
+    "        pass\n",
     "    # username\n",
     "    # checking\n",
     "    # savings\n",
@@ -400,7 +418,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.1"
   }
  },
