account does in fact work

--- a/the_beginning.ipynb
+++ b/the_beginning.ipynb
@@ -381,6 +381,71 @@
    "source": [
     "interface()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a9b7f43f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Account:\n",
+    "    def __init__(self, input_account_id = '0000', input_balance = 0.0, input_interest = 0):\n",
+    "        self.account_id = input_account_id\n",
+    "        self.interest = input_interest\n",
+    "        self.balance = input_balance\n",
+    "    \n",
+    "    def get_account(self):\n",
+    "        account_summary = f'(Account ID: {self.account_id}\\nBalance: ${self.balance:.2f}\\nInterest Rate: {self.interest}%)'\n",
+    "        return account_summary\n",
+    "\n",
+    "    def set_account(self, input_account_id, input_balance, input_interest):\n",
+    "        #Check account ID\n",
+    "        if not isinstance(input_account_id, str):\n",
+    "            raise TypeError('Account ID must be string.')\n",
+    "        elif len(input_account_id) != 4:\n",
+    "            raise ValueError('Account ID must be 4 characters in length.')\n",
+    "        elif input_account_id.isdigit() == False:\n",
+    "            raise ValueError('Account ID must be 4 numeric charaters.')\n",
+    "        \n",
+    "        #Check balance\n",
+    "        elif not isinstance(input_balance, float) or not isinstance(input_balance, int):\n",
+    "            raise TypeError('Balance must be a floating point number or integer')\n",
+    "        elif input_balance < 0:\n",
+    "            raise ValueError('Balance must be not be less than 0')\n",
+    "\n",
+    "        #Check Interest\n",
+    "        elif not isinstance(input_interest, int):\n",
+    "            raise TypeError('Interest must be an integer')\n",
+    "        elif input_interest < 0:\n",
+    "            raise ValueError('Interest must be not be less than 0')\n",
+    "        \n",
+    "        else:\n",
+    "            print('Updating account status')\n",
+    "            self._account_id = input_account_id\n",
+    "            self._balance = input_balance\n",
+    "            self._interest = input_interest\n",
+    "\n",
+    "    account = property(get_account, set_account)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "641f36c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "account = Account()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "442b0d46",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
